# EuroSTEMPeers2025_workshop

./: README.md  pyproject.toml
notebooks/: AI-Agents-Workshop.ipynb
